projet_gl/src/test/deca/context/valid/3_17/3_17_Decl_Var_Float.deca
// Description:
//    Programme déclaration de variable de type float
//
// Resultats:
//
// Historique:
//    cree le 09/01/2024

{
        float var2;
}
